# cours_2

./: README.md  pyproject.toml  requirements.txt
report/: index.html
src/: func.py  main.py  parser.py  save.py  vacancies.py
tests/: conftest.py  test_func.py  test_parser.py  test_save.py  test_vacancies.py
